<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lk.userapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.lk.userapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.lk.userapp.ui.wishlist.WishListFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wish_list" />

    <fragment
        android:id="@+id/nav_orderhistory"
        android:name="com.lk.userapp.ui.orderhistory.OrderHistoryFragment"
        android:label="@string/menu_orderhistory"
        tools:layout="@layout/fragment_order_history" />


    <fragment
        android:id="@+id/nav_cart"
        android:name="com.lk.userapp.ui.Cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.lk.userapp.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_orderrefund"
        android:name="com.lk.userapp.ui.orderfund.OrderFoundFragment"
        android:label="@string/menu_orderrefund"
        tools:layout="@layout/fragment_order_found" />

</navigation>